# ubuntu-psplash

./: .gitignore  Makefile.am  configure.ac  psplash-forever.service  psplash-infinite-porgress.c  psplash-start.service  psplash-systemd-initrd.service  psplash-systemd-setup.service  psplash-systemd.c
snap/: snapcraft.yaml
